--- a/index.html
+++ b/index.html
@@ -1,14 +1,10 @@
 ---
 layout: default
-title: Iteration Next
+title: Blogs posts
 ---
 
-<div id="home">
-    <p>Hello, Jekyll</p>
-    <h1>Blog Posts</h1>
-    <ul class="posts">
-        {% for post in site.posts %}
-        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-        {% endfor %}
-    </ul>
-</div>
+<ul class="posts">
+    {% for post in site.posts %}
+    <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+</ul>
